# GLTFDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/dong/testcpp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: model.frag  model.vert
app/src/main/cpp/: ModelRender.cpp  ModelRender.h  gl_code.cpp  gl_utils.cpp  gl_utils.h  json.h  log.h  shader.h  stb_image.h  stb_image_write.h  tiny_gltf.h
app/src/main/java/com/example/dong/testcpp/: GL2JNILib.java  MainActivity.java  MyRender.java
app/src/main/java/com/example/dong/testcpp/utils/: TextResourceReader.java
app/src/test/java/com/example/dong/testcpp/: ExampleUnitTest.java
